edit fixedBtn z-index

--- a/css/global/contents.css
+++ b/css/global/contents.css
@@ -1918,6 +1918,8 @@
   transform: translateY(-50%);
   perspective: 1200px;
 }
+
+
 .section_cont.guide_hanamoney_4 .utl_point_swiper .swiper-wrapper {
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
@@ -1963,6 +1965,46 @@
   transform: translateX(60vw);
   visibility: hidden;
 }
+
+
+
+/* .section_cont.guide_hanamoney_4 .utl_point_swiper .swiper-wrapper {
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: column;
+  flex-direction: column;
+  justify-content: center;
+  transform-style: preserve-3d;
+}
+.section_cont.guide_hanamoney_4 .utl_point_swiper .swiper-slide {
+  overflow: hidden;
+  width: 26.6vw;
+  height: 26.6vw;
+  opacity: 0.2;
+  border-radius: 2.0rem;
+  transition-duration: 300ms;
+}
+.section_cont.guide_hanamoney_4 .utl_point_swiper .swiper-slide img {
+  display: block;
+}
+.section_cont.guide_hanamoney_4 .utl_point_swiper .swiper-slide-active {
+  z-index: 2;
+  opacity: 1;
+  border-radius: 3.0rem;
+}
+.section_cont.guide_hanamoney_4 .utl_point_swiper .swiper-slide-prev,
+.section_cont.guide_hanamoney_4 .utl_point_swiper .swiper-slide-next {
+  z-index: 1;
+  opacity: 0.6;
+  border-radius: 2.2rem;
+  transform: translate3d(16vw, 0, -200vw);
+}
+.section_cont.guide_hanamoney_4 .utl_point_swiper .swiper-slide-first,
+.section_cont.guide_hanamoney_4 .utl_point_swiper .swiper-slide-last {
+  transform: translate3d(45vw, 0, -380vw);
+} */
+
+
 
 .section_cont.guide_hanamoney_5 {
   background: linear-gradient(157.38deg, #BBDDF2 -12.44%, #C3E1E2 48.65%, #EEF6EB 103.7%);
